Fix combination of editable and truncation.

--- a/src/stylesheets/abstracts/mixins/_utilities.scss
+++ b/src/stylesheets/abstracts/mixins/_utilities.scss
@@ -2,7 +2,7 @@
 // Utilities
 // --------------------------------------------------
 
-@mixin css-truncate {
+@mixin css-truncation {
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
