--- a/src/stylesheets/base/_utilities.scss
+++ b/src/stylesheets/base/_utilities.scss
@@ -13,5 +13,5 @@
 
 // CSS truncate
 .css-truncate {
-  @include css-truncate;
+  @include css-truncation;
 }
